<resources>
    <string name="app_name">Division Trainer</string>
    <string name="StartScreen_text">Choose a difficulty to start a game, or have a look at the tip of the day ;)</string>
    <string name="basic_button">Beginner</string>
    <string name="advanced_button">Advanced</string>
    <string name="tip_button">Tip of the day</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="new_game">New game</string>
    <string name="quit">Quit</string>
    <string name="Oefening">Here comes the exercise</string>
    <string name="Choice1">Choice 1</string>
    <string name="Choice2">Choice 2</string>
    <string name="Choice3">Choice 3</string>
    <string name="Choice4">Choice 4</string>
    <string name="Score">Score</string>
    <string name="TopScores">Top 3 results</string>
    <string name="back_arrow">Back_arrow</string>
    <string name="TipView">Tip view</string>
    <string name="QuitApp">Quit App</string>
    <string name="Home" translatable="false">Home</string>

</resources>