<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_exercise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/score_text"
            android:layout_marginEnd="-104dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/Score"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="@string/Oefening"
        android:textSize="20sp" />


    <Button
        android:id="@+id/choice1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:background="#0091EA"
        android:padding="8dp"
        android:text="@string/Choice1"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/choice2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:background="#0091EA"
        android:padding="8dp"
        android:text="@string/Choice2"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/choice3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:background="#0091EA"
        android:padding="8dp"
        android:text="@string/Choice3"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/choice4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:background="#0091EA"
        android:padding="8dp"
        android:text="@string/Choice4"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <Chronometer
        android:id="@+id/c_meter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="28dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#092FEC"
        android:textSize="36sp" />

</LinearLayout>
