<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AppBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_500">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/left_arrow"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/QuitApp"
            android:src="@drawable/ic_baseline_exit" />

    </RelativeLayout>

</RelativeLayout>